saving all basic changes
